# nixos-config

./: Cargo.toml  README.md  flake.nix  test.patch
comb/laptop/: diskoConfigurations.nix  hardwareProfiles.nix  homeConfigurations.nix  nixosConfigurations.nix  nixosModules.nix  pkgs.nix
comb/laptop/homeProfiles/: smplayer.nix
comb/laptop/homeProfiles/x17/home/: packages.nix
comb/laptop/homeProfiles/x17/programs/: firefox.nix  git.nix
comb/laptop/nixosProfiles/x17/boot/: kernelModules.nix  kernelPackages.nix  kernelParams.nix  kernelPatches.nix  loader.nix
comb/laptop/nixosProfiles/x17/environment/: systemPackages.nix
comb/laptop/nixosProfiles/x17/fonts/: packages.nix
comb/laptop/nixosProfiles/x17/hardware/: nvidia.nix  pulseaudio.nix
comb/laptop/nixosProfiles/x17/networking/: hostName.nix  nameservers.nix
comb/laptop/nixosProfiles/x17/nix/: gc.nix  settings.nix
comb/laptop/nixosProfiles/x17/programs/: dconf.nix  wireshark.nix
comb/laptop/nixosProfiles/x17/services/: pipewire.nix  resolved.nix  xserver.nix
comb/laptop/nixosProfiles/x17/system/: activationScripts.nix
comb/laptop/nixosProfiles/x17/systemd/: package.nix
comb/laptop/nixosProfiles/x17/time/: default.nix
comb/laptop/nixosProfiles/x17/users/: users.nix
comb/laptop/nixosProfiles/x17/zramSwap/: default.nix
src/: main.rs
